# download-encode

./: .gitignore  README.md  accessions.temp  constants.py  encode_experiment_example.json  encode_file_example.json  encode_file_schema.json  main.py  pyproject.toml
notebooks/: clean_encode.ipynb  clean_encode_2.ipynb  clean_encode_3.ipynb  get_columns.ipynb  get_experiment_total.ipynb  replicate_metadata.ipynb
src/: clean_encode.py  download_encode.py  download_encode_json.py  download_encode_matrix.py  encode_matrix.py  encode_matrix_by_accession.py
utils/: column_name_descriptions.py  utils.py
